@@ -257,10 +257,49 @@ sub amend {
 
 1;
 
+=head1 EXAMPLES
+
+=head2 Mojolicious
+
+You can use this with L<Mojolicious>:
+
+  use HTTP::CSPHeader;
+
+  use feature 'state';
+
+  $self->hook(
+    before_dispatch => sub ($c) {
+
+      state $csp = HTTP::CSPHeader->new(
+          policy => {
+              'default-src' => q['self'],
+              'script-src'  => q['self'],
+          },
+          nonces_for => 'script-src',
+      );
+
+      $csp->reset;
+
+      $c->stash( csp_nonce => $csp->nonce );
+
+      $c->res->headers->content_security_policy( $csp->header );
+    }
+  );
+
+and in your templates, you can use the following for inline scripts:
+
+=begin html
+
+<script nonce="<%= $csp_nonce %>">
+...
+</script>
+
+=end html
+
+If you do not need the nonce, then you might consider using L<Mojolicious::Plugin::CSPHeader>.
+
 =head1 SEE ALSO
 
 L<https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy>
-
-L<Mojolicious::Plugin::CSPHeader>
 
 =cut
