@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}
 
 {{$NEXT}}
+  [Documentation]
+  - Added example of usage with Mojolicious.
 
 v0.1.1    2022-04-04 11:20:36+01:00 Europe/London
   [Enhancements]
